src/styles/theme.css
:root {
  --theme-color: #0a0a23;
  --yellow-gold: #ffbf00;
  --gray-00: #ffffff;
  --gray-05: #f5f6f7;
  --gray-10: #dfdfe2;
  --gray-15: #d0d0d5;
  --gray-45: #858591;
  --gray-75: #3b3b4f;
  --gray-80: #2a2a40;
  --gray-85: #1b1b32;
  --gray-90: #0a0a23;
  --purple-light: #dbb8ff;
  --purple-dark: #5a01a7;
  --yellow-light: #ffc300;
  --yellow-dark: #4d3800;
  --blue-light: rgb(153, 201, 255);
  --blue-light-translucent: rgba(153, 201, 255, 0.3);
  --blue-dark: rgb(0, 46, 173);
  --blue-dark-translucent: rgba(0, 46, 173, 0.3);
  --green-light: #acd157;
  --blue-mid: #198eee;
  --purple-mid: #9400d3;
  --green-dark: #00471b;
  --red-light: #ffadad;
  --red-dark: #850000;
  --love-light: #f8577c;
  --love-dark: #f82153;
  --editor-background-light: #fffffe;
  --editor-background-dark: #2a2b40;
  --focus-outline-color: var(--blue-mid);
  --font-family-sans-serif: 'Lato', sans-serif;
  --font-family-monospace: 'Hack-ZeroSlash', monospace;

  --size: 1.5rem;
  --line-height: 2rem;
}

:root,
:root[data-theme='light'] {
  --primary-color: var(--gray-90);
  --secondary-color: var(--gray-85);
  --tertiary-color: var(--gray-80);
  --quaternary-color: var(--gray-75);
  --quaternary-background: var(--gray-15);
  --tertiary-background: var(--gray-10);
  --secondary-background: var(--gray-05);
  --primary-background: var(--gray-00);
  --highlight-color: var(--blue-dark);
  --highlight-background: var(--blue-light);
  --selection-color: var(--blue-dark-translucent);
  --success-color: var(--green-dark);
  --success-background: var(--green-light);
  --danger-color: var(--red-dark);
  --danger-background: var(--red-light);
  --love-color: var(--love-dark);
  --editor-background: var(--editor-background-light);

  --sl-color-accent-low: #b0deff;
  --sl-color-accent: #0073aa;
  --sl-color-accent-high: #003653;
  --sl-color-white: #121a1c;
  --sl-color-gray-1: #182a2f;
  --sl-color-gray-2: #2a3b41;
  --sl-color-gray-3: #495c62;
  --sl-color-gray-4: #7b8f96;
  --sl-color-gray-5: #bac4c8;
  --sl-color-gray-6: #e7eff2;
  --sl-color-gray-7: #f3f7f9;
  --sl-color-black: #ffffff;
}

:root[data-theme='dark'] {
  --primary-color: var(--gray-00);
  --secondary-color: var(--gray-05);
  --tertiary-color: var(--gray-10);
  --quaternary-color: var(--gray-15);
  --quaternary-background: var(--gray-75);
  --tertiary-background: var(--gray-80);
  --secondary-background: var(--gray-85);
  --primary-background: var(--gray-90);
  --highlight-color: var(--blue-light);
  --highlight-background: var(--blue-dark);
  --selection-color: var(--blue-light-translucent);
  --success-color: var(--green-light);
  --success-background: var(--green-dark);
  --danger-color: var(--red-light);
  --danger-background: var(--red-dark);
  --love-color: var(--love-light);
  --editor-background: var(--editor-background-dark);

  --sl-color-accent-low: #00273d;
  --sl-color-accent: #0071a7;
  --sl-color-accent-high: #92d1fe;
  --sl-color-white: #ffffff;
  --sl-color-gray-1: #e7eff2;
  --sl-color-gray-2: #bac4c8;
  --sl-color-gray-3: #7b8f96;
  --sl-color-gray-4: #495c62;
  --sl-color-gray-5: #2a3b41;
  --sl-color-gray-6: #182a2f;
  --sl-color-black: #121a1c;
}

@media (prefers-color-scheme: dark) {
  :root {
    --primary-color: var(--gray-00);
    --secondary-color: var(--gray-05);
    --tertiary-color: var(--gray-10);
    --quaternary-color: var(--gray-15);
    --quaternary-background: var(--gray-75);
    --tertiary-background: var(--gray-80);
    --secondary-background: var(--gray-85);
    --primary-background: var(--gray-90);
    --highlight-color: var(--blue-light);
    --highlight-background: var(--blue-dark);
    --selection-color: var(--blue-light-translucent);
    --success-color: var(--green-light);
    --success-background: var(--green-dark);
    --danger-color: var(--red-light);
    --danger-background: var(--red-dark);
    --love-color: var(--love-light);
    --editor-background: var(--editor-background-dark);

    --sl-color-accent-low: #00273d;
    --sl-color-accent: #0071a7;
    --sl-color-accent-high: #92d1fe;
    --sl-color-white: #ffffff;
    --sl-color-gray-1: #e7eff2;
    --sl-color-gray-2: #bac4c8;
    --sl-color-gray-3: #7b8f96;
    --sl-color-gray-4: #495c62;
    --sl-color-gray-5: #2a3b41;
    --sl-color-gray-6: #182a2f;
    --sl-color-black: #121a1c;
  }
}

body {
  font-size: 100%;
  line-height: 2.3em;
  background: var(--secondary-background) !important;
  color: var(--secondary-color);
}

* {
  text-decoration: none !important;
}

body .content {
  max-width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.header {
  background-color: var(--theme-color);
}

select,
option,
.icon {
  color: var(--primary-color);
}

/****** Sidebar ******/

.sidebar-pane {
  background-color: var(--primary-background);
}

.sidebar-content {
  color: var(--quaternary-color);
  padding: 0;
}

.sidebar-content ul li a,
.search a {
  color: var(--quaternary-color);
}

.sidebar-content ul li > a:hover,
.search a:hover {
  color: var(--primary-color);
}

.sidebar-content .search .clear-button {
  cursor: pointer;
}

.sidebar-content ul li.active > a {
  color: var(--primary-color);
}

[aria-current='page'],
[aria-current='page']:hover,
[aria-current='page']:focus {
  font-weight: 600;
  color: var(--tertiary-color);
  background-color: var(--quaternary-background);
}

/****** Markdown General ******/

/* Undo vue.css defaults */
.anchor span {
  all: unset;
}

.markdown-section h1,
.markdown-section h2 {
  margin: 1em 0;
  color: var(--secondary-color);
}

.markdown-section p {
  font-size: 18px;
  line-height: 28px;
}

.markdown-section code {
  background-color: var(--quaternary-background);
  color: var(--quaternary-color);
  padding: 0.05em 0.15em 0.15em;
  margin: 0.05em;
  font-size: 16px;
  line-height: 24px;
}

.markdown-section a {
  text-decoration: none;
  color: var(--secondary-color);
  border-bottom: 0.1rem solid var(--secondary-color);
}

.markdown-section a:hover {
  background-color: var(--tertiary-background);
  border: none;
}

.markdown-section a.anchor {
  border: none;
}

.markdown-section strong {
  color: var(--primary-color);
}

.markdown-section pre {
  background-color: var(--primary-background);
}
.markdown-section pre > code {
  background-color: var(--primary-background);
  color: var(--secondary-color);
}

.markdown-section a > code,
.markdown-section a > strong > code {
  background-color: var(--primary-color);
  color: var(--tertiary-background);
  padding: 0.05em 0.15em 0;
  margin: 0.05em;
}

.markdown-section a > code:hover,
.markdown-section a > code:active,
.markdown-section a > strong > code:hover,
.markdown-section a > strong > code:active {
  background-color: #525252;
  color: #f8f8f8;
  padding: 0.05em 0.15em 0;
  margin: 0.05em;
}

.markdown-section em,
.markdown-section blockquote {
  color: var(--tertiary-color);
}

.markdown-section tr:nth-child(2n) {
  background-color: var(--tertiary-background);
}

@media screen and (max-width: 768px) {
  .markdown-section {
    max-width: 90%;
    padding: 40px 15px;
  }
}

.sl-markdown-content tr:nth-child(2n):not(:where(.not-content *)) {
  background-color: unset;
}

